Fix toolbox on mobile

--- a/multiqc/templates/default/src/scss/custom.scss
+++ b/multiqc/templates/default/src/scss/custom.scss
@@ -73,20 +73,7 @@ code {
 }
 
 .side-nav {
-  h1 {
-    font-size: 18px;
-    text-align: center;
-    margin: 0;
-    border-bottom: 1px solid var(--#{$prefix}border-color);
-
-    img {
-      height: 26px;
-    }
-
-    small {
-      font-size: 12px;
-    }
-  }
+  border-bottom: 1px solid var(--#{$prefix}border-color);
 
   .side-nav-title a {
     color: #333;
@@ -135,7 +122,7 @@ code {
       border-top: 1px solid var(--#{$prefix}border-color);
     }
 
-    li:first-child .nav-l1 {
+    li:last-child .nav-l1 {
       border-top: 0;
     }
 
@@ -182,6 +169,13 @@ code {
   position: absolute;
   right: 10px;
   top: 15px;
+}
+
+/* Version and theme toggle positioning */
+@media only screen and (max-width: 767px) {
+  #mqc-nav-header {
+    padding: 10px;
+  }
 }
 
 #page_title {
@@ -1336,13 +1330,12 @@ tr.row-empty {
 
 /* MultiQC Logo Styling */
 .side-nav-logo {
-  /* Sizing for navigation (sidebar) */
-  height: 52px;
-  width: auto;
-  padding: 20px 0 5px;
+  text-align: center;
+  margin: 0;
+  padding: 0.25rem 0 0.5rem;
   svg {
+    height: 26px;
     width: 100%;
-    height: 100%;
   }
 }
 
